# bootcamp

./: .gitignore  404.html  CODE_OF_CONDUCT.md  LICENSE  README.md  extra.css  index.html  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
doc-agile-ai-lead/agile-ai-coding/: index.html
doc-agile-ai-lead/agile-ai-coding/vibe-vs-agentic/: index.html
doc-agile-ai-lead/ai-lead-poc/: index.html
doc-agile-ai-lead/deliver-plan/: index.html
doc-agile-ai-lead/deliver-plan/prd-uiux-design/: index.html
doc-agile-ai-lead/deliver-plan/prd-user-story/: index.html
doc-agile-ai-lead/discover-prd/: index.html
doc-agile/ax-build-intro/: index.html
doc-hands-on/dev-environment/: index.html
doc-hands-on/mcp-setup/: index.html
doc-introduction/: index.html
doc-introduction/ax-build-intro/: index.html
doc-introduction/course-overview/: index.html
doc-introduction/curriculum/: index.html
doc-introduction/overview/: index.html
docs/: .nav.yml  README.md  extra.css  index.md
docs/agile/: ax-build-intro.md
docs/agile-ai-lead/: ai-lead-poc.md  discover-prd.md
docs/doc-agile/: ax-build-intro.md
docs/doc-agile-ai-lead/: agile-ai-coding.md  ai-lead-poc.md  deliver-develop.md  deliver-planning.md  discover-prd.md
docs/doc-hands-on/: mcp-setup.md
docs/doc-introduction/: ax-build-intro.md  course-overview.md  curriculum.md  index.md  overview.md
docs/hands-on/: dev-environment.md  practice-tasks.md
search/: search_index.json
site/: 404.html  index.html
site/search/: search_index.json
toc/: index.html
(+28 files in other folders)
